# music-for-reading

./: .gitignore  README.md  local.properties.example  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  SampleBank.cpp  SampleBank.h  StylePresets.cpp  StylePresets.h  native_bridge.cpp
app/src/main/cpp/synth/: Arpeggiator.h  Envelope.h  NoiseGenerator.h  Oscillator.h  SoftLimiter.h
app/src/main/java/com/readingmusic/app/: MainActivity.kt
app/src/main/java/com/readingmusic/app/audio/: NativeAudioEngine.kt
app/src/main/java/com/readingmusic/app/domain/: AudioFocusHelper.kt  MusicStyle.kt  PlaybackController.kt  PlaybackViewModel.kt
app/src/main/java/com/readingmusic/app/service/: MusicPlaybackService.kt
app/src/main/java/com/readingmusic/app/ui/: HomeScreen.kt  PlayerScreen.kt
app/src/main/java/com/readingmusic/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
docs/: PLAY_STORE.md  PRIVACY_POLICY.md  STORE_LISTING.md
